tests/pass/LeftShift.java
package pass;

public class LeftShift {

    public int leftShift_(int x , int y) {
        return x << y;
    } 
}