tests/fail/LeftShift.java
package fail;

public class LeftShift {

    public static void main(String[] args) {
        System.out.println(4 << "Hej");
    } 
}